--- a/index.html
+++ b/index.html
@@ -1,1 +1,249 @@
-你好 星期天
+body, dl, dd, dt, p, h1, h2, h3, h4, h5, h6
+ul, ol {
+    margin: 0;
+    list-style: none;
+    padding: 0;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+* {
+    margin: 0;
+    padding: 0;
+}
+a img {
+    display: block;
+    border: none;
+}
+.clearfix:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+.fl-l {
+    float: left;
+}
+.fl-r {
+    float: right;
+}
+/*公共区域*/
+.div1 p{
+    font-weight: bold;
+    font-size: 20px;
+    width: 350px;
+}
+.div1{
+    margin: 50px auto;
+    width: 350px;
+}
+.div-dhh{
+    border-top: 1px solid #ccc;
+}
+.div-dh{
+    width: 1100px;
+    margin: auto;
+
+}
+.div-dh ul{
+    display: flex;
+    justify-content: space-between;
+    width: 770px;
+}
+.div-dh a{
+    height: 35px;
+    margin: 5px 25px;
+    font-weight: bold;
+    line-height: 35px;
+}
+.div-dh .a1{
+font-size: 20px;
+}
+/*公共区域*/
+.div2 img{
+    width: 100%;
+    cursor: pointer;
+}
+.div3{
+    width: 1100px;
+    margin: 100px auto;
+}
+.div3 ul{
+    width: 1100px;
+    display: flex;
+    justify-content:space-between;
+}
+.div3 ul li img{
+    width: 100%;
+    margin-bottom: 20px;
+}
+.div44{
+    background: #b4bfc1;
+    width: 100%;
+}
+.div4 {
+    width: 900px;
+    margin: auto;
+}
+.div4 video{
+    width: 900px;
+    margin: 75px 0;
+}
+.div5 li span{
+    display: block;
+    color: #ccc;
+    font-size: 14px;
+    text-align: center;
+    margin: 10px 0;
+}
+.div5 ul{
+    display: flex;
+    justify-content: space-between;
+}
+
+.div5 ul li  a{
+    /*display: inline-block;*/
+    font-size: 20px;
+    width: 180px;
+    border: 1px solid #000;
+    text-align: center;
+    margin: 5px auto;
+}
+.div5{
+    margin: 80px auto;
+    width: 1000px;
+}
+.div5 ul li  a span{
+    display: inline;
+    color: #797979;
+    font-size: 16px;
+}
+.div6 li span{
+       display: block;
+       color: #ccc;
+       font-size: 14px;
+       text-align: center;
+       margin: 10px 0;
+   }
+.div6 ul{
+    display: flex;
+    justify-content: space-between;
+}
+.div6 ul li {
+    width: 283px;
+}
+.div6 ul li  a{
+    font-size: 20px;
+    width: 180px;
+    border: 1px solid #000;
+    text-align: center;
+    margin: 5px auto;
+}
+.div6{
+    margin: 80px auto;
+    width: 1000px;
+}
+.div6 h5{
+    text-align:center;
+}
+.div ul li h6{
+    text-align: center;
+}
+.div6 ul li  a span{
+    display: inline;
+    color: #797979;
+    font-size: 16px;
+}
+.div7 li span{
+    display: block;
+    color: #ccc;
+    font-size: 14px;
+    text-align: center;
+    margin: 10px 0;
+}
+.div7 ul{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+.div7 ul li {
+    width: 188px;
+}
+.div7 ul li h5{
+    text-align: center;
+}
+.div7 ul li  a{
+    /*display: inline-block;*/
+    font-size: 20px;
+    width: 180px;
+    border: 1px solid #000;
+    text-align: center;
+    margin: 5px auto;
+}
+.div7{
+    margin: 80px auto;
+    width: 1000px;
+}
+.div7 ul li  a span{
+    display: inline;
+    color: #797979;
+    font-size: 16px;
+}
+.div7 img{
+    width: 180px;
+    height: 290px;
+}
+.qb{
+    width: 100%;!important;
+}
+/*底部优部分*/
+.div-db{
+    width: 1050px;
+    margin: 50px auto;
+}
+.div-db ul{
+    display: flex;
+    justify-content: space-between;
+}
+.div-db ul p{
+    width: 44px;
+    height: 44px;
+    color: red;
+    font-size: 30px;
+    border: 3px solid red;
+    border-radius: 50%;
+    line-height: 44px;
+    text-align: center;
+    margin-right: 15px;
+}
+.div-db ul h4{
+    color: #9e9e9e;
+    margin-top: 6px;
+}
+.div-db2{
+    background: #b4bfc1;
+    width: 100%;
+}
+.div-db2 ul {
+    display: flex;
+    justify-content: space-between;
+    width: 900px;
+    margin: auto;
+}
+.div-db2 li{
+    margin: 20px 0;
+}
+.div-db2 .p1{
+    text-align: center;
+    font-size: 18px;
+}
+.div-db2 img{
+    width: 150px;
+}
+.div-db2 .xz{
+    height: 20px;
+    position: relative;
+    right: 155px;
+    bottom: -155px;
+}
+/*底部优部分*/
